--- a/package.json
+++ b/package.json
@@ -25,6 +25,12 @@
     "gulp-sourcemaps": "^1.5.0",
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^3.0.0",
+    "jasmine": "^2.4.1",
+    "jquery": "^3.1.0",
+    "karma": "^1.1.1",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.1",
     "main-bower-files": "^2.5.0",
     "wiredep": "^2.2.2"
   },
